Desafio: adicionar outro repositório de vendas